--- a/book.bib
+++ b/book.bib
@@ -8,7 +8,7 @@
   title = "FIXME"
 }
 
-@article{bib:baume-fixme,
+@techreport{bib:baume-outcomes,
   author={D. Baume},
   title={Writing and using good learning outcomes},
   publisher={Leeds Metropolitan University Press},
@@ -105,6 +105,18 @@
     mainstream.}
 }
 
+@article{bib:kirschner-minimal,
+  author={Paul Kirschner and John Sweller and Richard Clark},
+  journal={Educational Psychologist},
+  number={2},
+  pages={75--86},
+  title={Why Minimal Guidance During Instruction Does Not Work: An Analysis of the Failure of Constructivist, Discovery, Problem-Based, Experiential, and Inquiry-Based Teaching},
+  volume=41,
+  year=2006,
+  annotate={Argues that inquiry-based learning is less effective for novices than
+    guided instruction.}
+}
+
 @misc{bib:koedinger-doing-watching,
   author = "FIXME",
   title = "FIXME"
@@ -118,6 +130,17 @@
 @misc{bib:littky-big-picture,
   author = "FIXME",
   title = "FIXME"
+}
+
+@article{bib:mayer-nine-ways,
+  author = {Richard E. Mayer and Roxana Moreno},
+  title = {Nine Ways to Reduce Cognitive Load in Multimedia Learning},
+  journal = {Educational Psychologist},
+  pages = {43--52},
+  volume = {38},
+  year = {2003},
+  annotate={Shows how research into how we absorb and process information can be
+    applied to the design of instructional materials.}
 }
 
 @misc{bib:patitsas-cs-grades,
