--- a/lessons.tex
+++ b/lessons.tex
@@ -295,8 +295,9 @@ and provides context to ensure that outcomes can be assessed.
 
 \end{tabular}
 
+\noindent
 Baume's guide to writing and using good learning outcomes
-\cite{bib:baume-fixme} is a good longer discussion of these issues.
+\cite{bib:baume-outcomes} is a good longer discussion of these issues.
 
 \begin{challenge}{Learner Profiles}{chal:learner-profiles}
 
