--- a/load.tex
+++ b/load.tex
@@ -3,7 +3,8 @@
 In 2006, Kirschner, Sweller, and Clark published a paper titled ``Why
 Minimal Guidance During Instruction Does Not Work: An Analysis of the
 Failure of Constructivist, Discovery, Problem-Based, Experiential, and
-Inquiry-Based Teaching'' \cite{fixme}. Its abstract says:
+Inquiry-Based Teaching'' \cite{bib:kirschner-minimal}. Its abstract
+says:
 
 \begin{quote}
 
@@ -125,24 +126,26 @@ teach.  For example, the series of problems are all examples of the
 from a collection are repeatedly added to a single variable in some way
 to create the final result.
 
-Cognitive load theory has been criticized as being unfalsifiable
-\cite{fixme}: since there's no way to tell in advance of
-an experiment whether something is germane or not, any result can be
-justified after the fact by labelling things that hurt performance as
-``extraneous'' and things that don't ``germane''.  However, there is
-no argument that faded examples are effective.
+Cognitive load theory has been criticized as being
+\href{https://edtechdev.wordpress.com/2009/11/16/cognitive-load-theory-failure/}{unfalsifiable}:
+since there's no way to tell in advance of an experiment whether
+something is germane or not, any result can be justified after the
+fact by labelling things that hurt performance as ``extraneous'' and
+things that don't ``germane''.  However, there is no doubt that faded
+examples are effective.
 
 \begin{callout}{Split Attention}{callout:split-attention}
 
 Research by Mayer and colleagues on the
 \emph{\href{https://en.wikipedia.org/wiki/Split\_attention\_effect}{split-attention
-effect}} is closely related to cognitive load theory.  Linguistic and
-visual input are processed by different parts of the human brain, and
-linguistic and visual memories are stored separately as well. This
-means that correlating linguistic, auditory, and visual streams of
-information takes cognitive effort: when someone reads something while
-hearing it spoken aloud, their brain can't help but check that it's
-getting the same information on both channels.
+effect}} is closely related to cognitive load theory
+\cite{bib:mayer-nine-ways}.  Linguistic and visual input are
+processed by different parts of the human brain, and linguistic and
+visual memories are stored separately as well. This means that
+correlating linguistic, auditory, and visual streams of information
+takes cognitive effort: when someone reads something while hearing it
+spoken aloud, their brain can't help but check that it's getting the
+same information on both channels.
 
 Learning is therefore more effective when redundant information is
 \emph{not} being presented simultaneously in two different channels. For
