Changing chapter headings

--- a/checklists.tex
+++ b/checklists.tex
@@ -1,4 +1,4 @@
-\chaplbl{Checklists}{sec:checklists}{0}{0}
+\chaplbl{Checklists}{sec:checklists}
 
 See Atul Gawande's 2007 article
 ``\href{http://www.newyorker.com/magazine/2007/12/10/the-checklist}{The Checklist}''
