--- a/load.tex
+++ b/load.tex
@@ -1,4 +1,4 @@
-\chaplbl{Cognitive Load}{sec:load}{20}{20}
+\chaplbltime{Cognitive Load}{sec:load}{20}{20}
 
 In 2006, Kirschner, Sweller, and Clark published a paper titled ``Why
 Minimal Guidance During Instruction Does Not Work: An Analysis of the
