--- a/memory.tex
+++ b/memory.tex
@@ -1,4 +1,4 @@
-\chaplbl{Expertise and Memory}{sec:memory}{20}{20}
+\chaplbltime{Expertise and Memory}{sec:memory}{20}{20}
 
 The previous chapter looked at what distinguishes novices from
 competent practitioners.  Here, we will look at expertise: what it is,
