--- a/motivation.tex
+++ b/motivation.tex
@@ -1,4 +1,4 @@
-\chaplbl{Motivation and Demotivation}{sec:motivation}{20}{30}
+\chaplbltime{Motivation and Demotivation}{sec:motivation}{20}{30}
 
 In order for learners to step out into new and familiar terrain, they
 need encouragement. This chapter discusses typical ways that learners
