--- a/novice.tex
+++ b/novice.tex
@@ -1,4 +1,4 @@
-\chaplbl{Helping Novices Build Mental Models}{sec:novice}{20}{30}
+\chaplbltime{Helping Novices Build Mental Models}{sec:novice}{20}{30}
 
 The first task in teaching is to figure out who your learners are and
 how best to help them.  Our approach is based on the
