--- a/practices.tex
+++ b/practices.tex
@@ -1,4 +1,4 @@
-\chaplbl{Live Coding}{sec:practices}{30}{45}
+\chaplbltime{Live Coding}{sec:practices}{30}{45}
 
 \begin{quote}
   Teaching is theater not cinema.
