--- a/performance.tex
+++ b/performance.tex
@@ -1,4 +1,4 @@
-\chaplbl{Teaching as a Performance Art}{sec:performance}{20}{45}
+\chaplbltime{Teaching as a Performance Art}{sec:performance}{20}{45}
 
 Many people assume that teachers are born, not made. From politicians
 to researchers and teachers themselves, reformers have designed
