Another chapter of citations

--- a/book.bib
+++ b/book.bib
@@ -132,13 +132,26 @@
   title = "FIXME"
 }
 
+@article{bib:macnamara-deliberate,
+  author={Brooke N. Macnamara and David Z. Hambrick and Frederick L. Oswald},
+  title={Deliberate Practice and Performance in Music, Games, Sports, Education, and Professions},
+  journal={Psychological Science},
+  volume={25},
+  number={8},
+  pages={1608--1618},
+  year={2014},
+  doi={10.1177/0956797614535810},
+  url={http://dx.doi.org/10.1177/0956797614535810},
+  annotate={A meta-study of the effectiveness of deliberate practice.}
+}
+
 @article{bib:mayer-nine-ways,
-  author = {Richard E. Mayer and Roxana Moreno},
-  title = {Nine Ways to Reduce Cognitive Load in Multimedia Learning},
-  journal = {Educational Psychologist},
-  pages = {43--52},
-  volume = {38},
-  year = {2003},
+  author={Richard E. Mayer and Roxana Moreno},
+  title={Nine Ways to Reduce Cognitive Load in Multimedia Learning},
+  journal={Educational Psychologist},
+  pages={43--52},
+  volume={38},
+  year={2003},
   annotate={Shows how research into how we absorb and process information can be
     applied to the design of instructional materials.}
 }
@@ -148,9 +161,21 @@
   title = "FIXME"
 }
 
-@misc{bib:porter-what-works,
-  author = "FIXME",
-  title = "FIXME"
+@article{bib:porter-what-works,
+  author={Leo Porter and Mark Guzdial and Charlie McDowell and Beth Simon},
+  title={Success in Introductory Programming: What Works?},
+  journal={Communications of the ACM},
+  volume={56},
+  number={8},
+  month={August},
+  year={2013},
+  pages={34--36},
+  url={http://doi.acm.org/10.1145/2492007.2492020},
+  doi={10.1145/2492007.2492020},
+  publisher={ACM},
+  annotate={Summarizes the evidence that three techniques---peer instruction, media
+    computation, and pair programming---can significantly improve outcomes
+    in introductory programming courses.}
 }
 
 @book{bib:scott-state,
