--- a/memory.tex
+++ b/memory.tex
@@ -93,14 +93,14 @@ but subtly different things, paying attention to what works and what
 doesn't, and then changing behavior in response to that feedback to
 get cumulatively better.
 
-Second, a meta-study conducted in 2014 \cite{fixme} found that
-``{\ldots}deliberate practice explained 26\% of the variance in
-performance for games, 21\% for music, 18\% for sports, 4\% for
-education, and less than 1\% for professions.'' One explanation for
-this variation is that deliberate practice works best when the rules
-for evaluating success are very stable, but is less effective when
-there are more factors at play (i.e., when it's harder to connect
-cause to effect).
+Second, a meta-study conducted in 2014 \cite{bib:macnamara-deliberate}
+found that ``{\ldots}deliberate practice explained 26\% of the
+variance in performance for games, 21\% for music, 18\% for sports,
+4\% for education, and less than 1\% for professions.'' One
+explanation for this variation is that deliberate practice works best
+when the rules for evaluating success are very stable, but is less
+effective when there are more factors at play (i.e., when it's harder
+to connect cause to effect).
 
 \end{callout}
 
