Citations and a dangling figure reference

--- a/book.bib
+++ b/book.bib
@@ -1,6 +1,12 @@
-@misc{bib:ambrose-hlw,
-  author = "FIXME",
-  title = "FIXME"
+@book{bib:ambrose-hlw,
+  author={Susan A. Ambrose and Michael W. Bridges and Michele DiPietro and Marsha C. Lovett and Marie K. Norman},
+  title={How Learning Works: Seven Research-Based Principles for Smart Teaching},
+  publisher={Jossey-Bass},
+  year={2010},
+  isbn={0470484101},
+  annotate={An excellent overview of what we know about education and why we believe
+    it's true, covering everything from cognitive psychology to social
+    factors.}
 }
 
 @misc{bib:barker-practice-adoption,
@@ -78,10 +84,18 @@
   title = "FIXME"
 }
 
-@misc{bib:guzdial-mediacomp-retrospective,
-  author = "FIXME",
-  title = "FIXME"
-}
+@inproceedings{bib:guzdial-mediacomp-retrospective,
+  author={Mark Guzdial},
+  title={Exploring Hypotheses About Media Computation},
+  booktitle={Proceedings of the Ninth Annual International ACM Conference on International Computing Education Research},
+  year={2013},
+  isbn={978-1450322430},
+  pages={19--26},
+  url={http://doi.acm.org/10.1145/2493394.2493397},
+  doi={10.1145/2493394.2493397},
+  publisher={ACM},
+  annotate={A look back on 10 years of media computation research.}
+} 
 
 @misc{bib:guzdial-top10,
   author = "FIXME",
@@ -123,13 +137,20 @@
 }
 
 @misc{bib:lee-create-inclusive-community,
-  author = "FIXME",
-  title = "FIXME"
+  author={Cynthia Lee},
+  title={What can I do today to create a more inclusive community in CS?},
+  howpublished={https://docs.google.com/document/d/1hLivou9-\_wmsZuzKI2pCGQu0KHVIgYfJSaYhvTgO0Wo/},
+  year={2017},
+  annotate={A practical checklist of things instructors can do to make their computing classes more inclusive.}
 }
 
-@misc{bib:littky-big-picture,
-  author = "FIXME",
-  title = "FIXME"
+@book{bib:littky-big-picture,
+  title={The Big Picture: Education is Everyone's Business},
+  author={D. Littky and S. Grabelle},
+  isbn={9780871209719},
+  year={2004},
+  publisher={Association for Supervision and Curriculum Development},
+  annotate={A personal exploration of the purpose of education and how to make schools better.}
 }
 
 @article{bib:macnamara-deliberate,
@@ -145,6 +166,25 @@
   annotate={A meta-study of the effectiveness of deliberate practice.}
 }
 
+@book{bib:margolis-fisher-clubhouse,
+  author={J. Margolis and A. Fisher},
+  title={Unlocking the Clubhouse: Women in Computing},
+  isbn={9780262632690},
+  year={2003},
+  publisher={MIT Press},
+  annotate={A groundbreaking report on the gender imbalance in computing, and the
+    steps Carnegie-Mellon took to address the problem.}
+}
+
+@book{bib:margolis-shallow,
+  author={J. Margolis and R. Estrella and J. Goode and J.J. Holme and K. Nao},
+  title={Stuck in the Shallow End: Education, Race, and Computing},
+  isbn={9780262260961},
+  year={2010},
+  publisher={MIT Press},
+  annotate={A hard-hitting look at racial inequities in computing education.}
+}
+
 @article{bib:mayer-nine-ways,
   author={Richard E. Mayer and Roxana Moreno},
   title={Nine Ways to Reduce Cognitive Load in Multimedia Learning},
@@ -156,9 +196,19 @@
     applied to the design of instructional materials.}
 }
 
-@misc{bib:patitsas-cs-grades,
-  author = "FIXME",
-  title = "FIXME"
+@inproceedings{bib:patitsas-cs-grades,
+  author={Elizabeth Patitsas and Jesse Berlin and Michelle Craig and Steve Easterbrook},
+  title={Evidence That Computer Science Grades Are Not Bimodal},
+  booktitle={Proceedings of the 2016 ACM Conference on International Computing Education Research},
+  year={2016},
+  isbn={978-1450344494},
+  pages={113--121},
+  url={http://doi.acm.org/10.1145/2960310.2960312},
+  doi={10.1145/2960310.2960312},
+  publisher={ACM},
+  annotate={Presents a statistical analysis and an experiment which jointly show
+    that despite popular myth, grades in computing classes are not bimodal---i.e.,
+    there is no ``geek gene''.}
 }
 
 @article{bib:porter-what-works,
@@ -187,6 +237,15 @@
   annotate={Presents a compelling case that centrally-managed, top-down ventures
     will always be less effective than grassroots alternatives because large
     organizations consistently prefer uniformity over productivity.}
+}
+
+@book{bib:steele-vivaldi,
+  author={C.M. Steele},
+  title={Whistling Vivaldi: And Other Clues to How Stereotypes Affect Us (Issues of Our Time)},
+  isbn={9780393341485},
+  year={2011},
+  publisher={W. W. Norton},
+  annotate={Explains and explores stereotype threat and strategies for addressing it.}
 }
 
 @misc{bib:stefik-fixme,
