--- a/motivation.tex
+++ b/motivation.tex
@@ -62,7 +62,7 @@ size, learners have a concrete starting point for debugging.
 
 \begin{callout}{Strategies for Motivating Learners}{callout:strategies-for-motivating-learners}
 
-\emph{How Learning Works} \cite{fixme} contains a list of
+\emph{How Learning Works} \cite{bib:ambrose-hlw} contains a list of
 evidence-based methods to motivate learners.  None of them are
 surprising---it's hard to imagine someone saying that we
 \emph{shouldn't} identify and reward what we value---but it's
@@ -222,7 +222,7 @@ threat}}, and the clearest examples in computing are gender-related.
 Depending on whose numbers you trust, only 12-18\% of programmers are
 women, and those figures have actually been getting worse over the
 last 20 years. There are many reasons for this (see
-\cite{bib:margolis-fisher} and \cite{bib:margolis-shallow-end}),
+\cite{bib:margolis-fisher-clubhouse} and \cite{bib:margolis-shallow}),
 and \cite{bib:steele-vivaldi} summarizes what we know about stereotype
 threat in general and presents some strategies for mitigating it in
 the classroom.
@@ -458,10 +458,10 @@ most immediately useful first'' approach.
 
 \begin{challenge}{Pick One}{chal:pick-one}
 
-Pick one activity or change in practice from Lee's
-paper \cite{bib:lee-create-inclusive-community} that you would like to
-work on.  Put a reminder in your calendar three months in the future
-to self-check whether you have done something about it.
+Pick one activity or change in practice from Lee's paper
+\cite{bib:lee-create-inclusive-community} that you would like to work
+on.  Put a reminder in your calendar three months in the future to
+self-check whether you have done something about it.
 
 \end{challenge}
 
