--- a/book.bib
+++ b/book.bib
@@ -23,6 +23,15 @@
   annotate={A useful detailed guide to constructing useful learning outcomes.}
 }
 
+@book{bib:benner,
+  author={Patricia Benner},
+  title={From Novice to Expert: Excellence and Power in Clinical Nursing Practice},
+  publiser={Pearson},
+  year={2000},
+  isbn={978-0130325228},
+  annotate={A classic study of clinical judgment and how expertise develops.}
+}
+
 @misc{bib:carroll-minimal-manual,
   author = "FIXME",
   title = "FIXME"
@@ -36,6 +45,26 @@
 @misc{bib:debruyckere-urban-myths,
   author = "FIXME",
   title = "FIXME"
+}
+
+@book{bib:epstein-thinking-physics,
+  title={Thinking Physics is Gedanken Physics},
+  author={L.C. Epstein},
+  isbn={9780935218084},
+  year={2002},
+  publisher={Insight Press},
+  annotate={An entertaining problem-based introduction to thinking like a physicist.}
+}
+
+
+@book{bib:fehily-sql,
+  author={Chris Fehily},
+  title={SQL: Visual QuickStart Guide},
+  edition={3},
+  publisher={Peachpit Press},
+  year={2008},
+  isbn={978-0321553577},
+  annotate={An introduction to SQL that is both a good tutorial and a good reference guide.}
 }
 
 @misc{bib:fincher-stories-change,
@@ -118,6 +147,35 @@
     form a useful framework for thinking about how free-range workshops can go
     mainstream.}
 }
+
+@book{bib:kernighan-plauger-elements,
+  author={Brian W. Kernighan and P.J. Plauger},
+  title={The Elements of Programming Style},
+  year={1982},
+  isbn={0070342075},
+  edition={2nd},
+  publisher={McGraw-Hill, Inc.},
+  annotate={An early and influential description of the Unix programming philosophy.}
+}
+
+@book{bib:kernighan-pike-upe,
+  author={Brian W. Kernighan and Rob Pike},
+  title={The UNIX Programming Environment},
+  year={1984},
+  isbn={013937681X},
+  publisher={Prentice Hall Professional Technical Reference},
+  annotate={An influential early description of Unix.}
+} 
+
+@book{bib:kernighan-ritchie-c,
+  author={Brian W. Kernighan and Dennis M. Ritchie},
+  title={The  C Programming Language},
+  year={1988},
+  isbn={0131103709},
+  edition={2nd},
+  publisher={Prentice Hall Professional Technical Reference},
+  annotate={The book that made C a popular programming language.}
+} 
 
 @article{bib:kirschner-minimal,
   author={Paul Kirschner and John Sweller and Richard Clark},
@@ -226,6 +284,16 @@
   annotate={Summarizes the evidence that three techniques---peer instruction, media
     computation, and pair programming---can significantly improve outcomes
     in introductory programming courses.}
+}
+
+@book{bib:ray-ray-unix,
+  author={Eric J. Ray and Deborah S. Ray},
+  title={Unix and Linux: Visual QuickStart Guide},
+  edition={5},
+  publisher={Peachpit Press},
+  year={2014},
+  isbn={978-0321997548},
+  annotate={An introduction to Unix that is both a good tutorial and a good reference guide.}
 }
 
 @book{bib:scott-state,
