--- a/novice.tex
+++ b/novice.tex
@@ -5,7 +5,7 @@ how best to help them.  Our approach is based on the
 \href{https://en.wikipedia.org/wiki/Dreyfus\_model\_of\_skill\_acquisition}{Dreyfus
 model of skill acquisition}, and more specifically on the work of
 researchers like Patricia Benner, who studied how nurses progress from
-being novices to being experts \cite{benner}.  Benner identified five
+being novices to being experts \cite{bib:benner}.  Benner identified five
 stages of cognitive development that most people go through in a
 fairly consistent way\footnote{We say ``most'' and ``fairly'' because
 human beings are variable, and there will always be outliers.
@@ -52,9 +52,9 @@ differently.  In particular, presenting novices with a pile of facts
 early on is counter-productive, because they don't yet have a model to
 fit those facts into\footnote{In fact, presenting too many facts too
 soon can actually reinforce the incorrect mental model they've cobbled
-together \cite{}.}. Instead, the goal with novices is \emph{to help
-them construct a working mental model} so that they have somewhere to
-put facts.
+together \cite{fixme}.}. Instead, the goal with novices is \emph{to
+help them construct a working mental model} so that they have
+somewhere to put facts.
 
 As an example of what this means in practice, Software Carpentry's
 \href{http://swcarpentry.github.io/shell-novice/}{lesson on the Unix
@@ -79,10 +79,12 @@ practitioners because they move too slowly and say things that are
 obvious (though of course they are anything but to newcomers). Equally,
 manuals frustrate novices because they use jargon and \emph{don't}
 explain things. One of the reasons Unix and C became popular is that
-Kernighan et al's books \cite{fixme} somehow managed to be good tutorials
-\emph{and} good manuals at the same time. Ray and Ray's book on Unix \cite{fixme}
-and Fehily's introduction to SQL \cite{fixme} are among the very few
-other books in computing that have accomplished this.
+Kernighan et al's trilogy \cite{bib:kernighan-plauger-elements,bib:kernighan-pike-upe,bib:kernighan-ritchie-c}
+somehow managed to be good tutorials
+\emph{and} good manuals at the same time. Ray and Ray's book on Unix
+\cite{bib:ray-ray-unix}
+and Fehily's introduction to SQL \cite{bib:fehily-sql} are among the
+very few other books in computing that have accomplished this.
 
 \end{callout}
 
@@ -230,8 +232,9 @@ The best solution developed so far is a technique called
 \emph{\href{https://en.wikipedia.org/wiki/Peer\_instruction}{peer
 instruction}}. Originally created by Eric Mazur at Harvard, it has
 been studied extensively in a wide variety of contexts, including
-programming \cite{fixme}. Peer instruction combines formative
-assessment with student discussion and looks something like this:
+programming \cite{bib:porter-what-works}. Peer instruction combines
+formative assessment with student discussion and looks something like
+this:
 
 \begin{enumerate}
 
@@ -406,10 +409,11 @@ where they are and what they need to do next.
 \begin{challenge}{Icebergs}{chal:novice-iceberg}
 
 An example of how solving problems can help people correct broken
-mental models, consider this problem from \cite{epstein}. Imagine that
-you have placed a cake of ice in a bathtub and then filled the tub to
-the rim with water. When the ice melts, does the water level go up (so
-that the tub overflows), go down, or stay the same?
+mental models, consider this problem
+from \cite{bib:epstein-thinking-physics}.  Imagine that you have
+placed a cake of ice in a bathtub and then filled the tub to the rim
+with water. When the ice melts, does the water level go up (so that
+the tub overflows), go down, or stay the same?
 
 \fixme{FIGURE}
 
