--- a/book.bib
+++ b/book.bib
@@ -9,9 +9,18 @@
     factors.}
 }
 
-@misc{bib:barker-practice-adoption,
-  author = "FIXME",
-  title = "FIXME"
+@inproceedings{bib:barker-practice-adoption,
+  author={Barker, Lecia and Hovey, Christopher Lynnly and Gruning, Jane},
+  title={What Influences CS Faculty to Adopt Teaching Practices?},
+  booktitle={Proceedings of the 46th ACM Technical Symposium on Computer Science Education},
+  year={2015},
+  isbn={978-1450329668},
+  pages={604--609},
+  numpages={6},
+  doi={10.1145/2676723.2677282},
+  publisher={ACM},
+  annotate={Describes findings from a two-part study of how computer science educators
+    adopt new teaching practices.}
 }
 
 @techreport{bib:baume-outcomes,
@@ -67,14 +76,26 @@
   annotate={An introduction to SQL that is both a good tutorial and a good reference guide.}
 }
 
-@misc{bib:fincher-stories-change,
-  author = "FIXME",
-  title = "FIXME"
+@inproceedings{bib:fincher-stories-change,
+  author={Sally Fincher and Brad Richards and Janet Finlay and Helen Sharp and Isobel Falconer},
+  title={Stories of Change: How Educators Change Their Practice},
+  booktitle={2012 Frontiers in Education Conference Proceedings},
+  year={2012},
+  pages={1--6},
+  doi={10.1109/FIE.2012.6462317},
+  annotate={A detailed look at how educators actually adopt new teaching practices.}
 }
 
-@misc{bib:fincher-warrens-questions,
-  author = "FIXME",
-  title = "FIXME"
+@inproceedings{bib:fincher-warrens-questions,
+  author={Sally Fincher and Josh Tenenberg},
+  title={Warren's Question},
+  booktitle={Proceedings of the Third International Workshop on Computing Education Research},
+  year={2007},
+  isbn={978-1595938411},
+  pages={51--60},
+  doi={10.1145/1288580.1288588},
+  publisher={ACM},
+  annotate={A detailed look at a particular instance of transferring a teaching practice.}
 }
 
 @misc{bib:fink-csle,
@@ -83,9 +104,14 @@
   url = "http://www.amazon.com/Creating-Significant-Learning-Experiences-Integrated/dp/1118124251/"
 }
 
-@misc{bib:gawande-personal-best,
-  author = "FIXME",
-  title = "FIXME"
+@article{bib:gawande-personal-best,
+  author={Atul Gawande},
+  title={Personal Best},
+  journal={The New Yorker},
+  year={2011},
+  month={October},
+  day={3},
+  annotate={Describes how having a coach can improve practice in a wide variety of fields.}
 }
 
 @misc{bib:gelman-nolan-stats-tricks,
@@ -94,8 +120,16 @@
 }
 
 @misc{bib:gormally-teaching-feedback,
-  author = "FIXME",
-  title = "FIXME"
+  author={Cara Gormally and Mara Evans and Peggy Brickman},
+  title={Feedback about Teaching in Higher Ed: Neglected Opportunities to Promote Change},
+  journal={CBE Life Sciences Education},
+  volume={13},
+  number={2},
+  year={2014},
+  pages={187-–199},
+  doi={10.1187/cbe.13-12-0235},
+  annotate={Summarizes the best practices for providing instructional feedback,
+    and recommends specific strategies for providing feedback.}
 }
 
 @book{bib:green-babt,
@@ -124,7 +158,7 @@
   doi={10.1145/2493394.2493397},
   publisher={ACM},
   annotate={A look back on 10 years of media computation research.}
-} 
+}
 
 @misc{bib:guzdial-top10,
   author = "FIXME",
@@ -165,7 +199,7 @@
   isbn={013937681X},
   publisher={Prentice Hall Professional Technical Reference},
   annotate={An influential early description of Unix.}
-} 
+}
 
 @book{bib:kernighan-ritchie-c,
   author={Brian W. Kernighan and Dennis M. Ritchie},
@@ -175,7 +209,7 @@
   edition={2nd},
   publisher={Prentice Hall Professional Technical Reference},
   annotate={The book that made C a popular programming language.}
-} 
+}
 
 @article{bib:kirschner-minimal,
   author={Paul Kirschner and John Sweller and Richard Clark},
