--- a/book.bib
+++ b/book.bib
@@ -223,10 +223,18 @@
     guided instruction.}
 }
 
-@misc{bib:koedinger-doing-watching,
-  author = "FIXME",
-  title = "FIXME"
-}
+@inproceedings{bib:koedinger-doing-watching,
+  author={Kenneth R. Koedinger and Jihee Kim and Julianna Zhuxin Jia and Elizabeth A. McLaughlin and Norman L. Bier},
+  title={Learning is Not a Spectator Sport: Doing is Better Than Watching for Learning from a MOOC},
+  booktitle={Proceedings of the Second (2015) ACM Conference on Learning @ Scale},
+  year={2015},
+  isbn={978-1450334112},
+  pages={111--120},
+  numpages={10},
+  doi={10.1145/2724660.2724681},
+  publisher={ACM},
+  annotate={Measures the benefits of doing rather than watching.}
+} 
 
 @misc{bib:lee-create-inclusive-community,
   author={Cynthia Lee},
