Filling in bibliography

--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,16 @@
+@article{bib:aiken-note-taking,
+  author={Edwin G. Aiken and Gary S. Thomas and William A. Shennum},
+  title={Memory for a lecture: Effects of notes, lecture rate, and informational density},
+  journal={Journal of Educational Psychology},
+  volume={67},
+  number={3},
+  month={June},
+  year={1975},
+  pages={439--444},
+  doi={dx.doi.org/10.1037/h0076613},
+  annotate={A landmark study showing that taking notes improves retention when learning.}
+}
+
 @book{bib:ambrose-hlw,
   author={Susan A. Ambrose and Michael W. Bridges and Michele DiPietro and Marsha C. Lovett and Marie K. Norman},
   title={How Learning Works: Seven Research-Based Principles for Smart Teaching},
@@ -41,19 +54,28 @@
   annotate={A classic study of clinical judgment and how expertise develops.}
 }
 
-@misc{bib:carroll-minimal-manual,
-  author = "FIXME",
-  title = "FIXME"
+@article{bib:bohay-note-taking,
+  author={Mark Bohay and Daniel P. Blakely and Andrea K. Tamplin and Gabriel A. Radvansky},
+  title={Note Taking, Review, Memory, and Comprehension},
+  journal={American Journal of Psychology},
+  volume={124},
+  number={1},
+  year={2011},
+  pages={63--73},
+  doi={10.5406/amerjpsyc.124.1.0063},
+  annotate={Presents a study showing that note-taking improves retention most
+    at deeper levels of understanding.}
 }
 
-@misc{bib:deans-for-impact,
-  author = "FIXME",
-  title = "FIXME"
-}
-
-@misc{bib:debruyckere-urban-myths,
-  author = "FIXME",
-  title = "FIXME"
+@inproceedings{bib:brown-empirical,
+  author={Neil CC Brown and Amjad Altadmri},
+  title={Investigating Novice Programming Mistakes: Educator Beliefs vs. Student Data},
+  booktitle={Proceedings of the Tenth Annual Conference on International Computing Education Research},
+  pages={43--50},
+  year={2014},
+  doi={dx.doi.org/10.1145/2632320.2632343},
+  annotate={Uses data from over 100,000 students to show that educators
+    know less than they think about what mistakes novice programmers actually make.}
 }
 
 @book{bib:epstein-thinking-physics,
@@ -64,7 +86,6 @@
   publisher={Insight Press},
   annotate={An entertaining problem-based introduction to thinking like a physicist.}
 }
-
 
 @book{bib:fehily-sql,
   author={Chris Fehily},
@@ -98,12 +119,6 @@
   annotate={A detailed look at a particular instance of transferring a teaching practice.}
 }
 
-@misc{bib:fink-csle,
-  author = "FIXME",
-  title = "Creating Significant Learning Experiences",
-  url = "http://www.amazon.com/Creating-Significant-Learning-Experiences-Integrated/dp/1118124251/"
-}
-
 @article{bib:gawande-personal-best,
   author={Atul Gawande},
   title={Personal Best},
@@ -112,11 +127,6 @@
   month={October},
   day={3},
   annotate={Describes how having a coach can improve practice in a wide variety of fields.}
-}
-
-@misc{bib:gelman-nolan-stats-tricks,
-  author = "FIXME",
-  title = "FIXME"
 }
 
 @misc{bib:gormally-teaching-feedback,
@@ -142,9 +152,22 @@
    50 years have mostly missed the mark, and what we should be doing instead.}
 }
 
-@misc{bib:guzdial-hard,
-  author = "FIXME",
-  title = "FIXME"
+@misc{bib:guzdial-blog,
+  author={Mark Guzdial},
+  title={Computing Education Blog},
+  howpublished={https://computinged.wordpress.com/},
+  year={2017},
+  annotate={An informative, frequently-updated blog about computing education.}
+}
+
+@book{bib:guzdial-lcd,
+  author={Mark Guzdial},
+  title={Learner-Centered Design of Computing Education: Research on Computing for Everyone},
+  publisher={Morgan \& Claypool},
+  year={2015},
+  isbn={978-1627053518},
+  annotate={An evidence-based argument that we must design computing education for everyone,
+    not just people who think they are going to become full-time professional programmers.}
 }
 
 @inproceedings{bib:guzdial-mediacomp-retrospective,
@@ -158,11 +181,6 @@
   doi={10.1145/2493394.2493397},
   publisher={ACM},
   annotate={A look back on 10 years of media computation research.}
-}
-
-@misc{bib:guzdial-top10,
-  author = "FIXME",
-  title = "FIXME"
 }
 
 @article{bib:henderson-facilitating,
@@ -180,6 +198,16 @@
   annotate={Describes eight approaches to effecting change in STEM education that
     form a useful framework for thinking about how free-range workshops can go
     mainstream.}
+}
+
+@book{bib:huston-dont-know,
+  author={Therese Huston},
+  title={Teaching What You Don't Know},
+  publisher={Harvard University Press},
+  year={2009},
+  isbn={978-0674035805},
+  annotate={A pointed, funny, and very useful book that explores exactly what the
+    title suggests.}
 }
 
 @book{bib:kernighan-plauger-elements,
@@ -234,7 +262,17 @@
   doi={10.1145/2724660.2724681},
   publisher={ACM},
   annotate={Measures the benefits of doing rather than watching.}
-} 
+}
+
+@book{bib:lang-small-teaching,
+  author={James M. Lang},
+  title={Small Teaching: Everyday Lessons from the Science of Learning},
+  publisher={Jossey-Bass},
+  year={2016},
+  isbn={978-1118944493},
+  annotate={Presents a selection of accessible evidence-based practices that teachers can adopt
+    when they little time and few resources.}
+}
 
 @misc{bib:lee-create-inclusive-community,
   author={Cynthia Lee},
@@ -242,6 +280,17 @@
   howpublished={https://docs.google.com/document/d/1hLivou9-\_wmsZuzKI2pCGQu0KHVIgYfJSaYhvTgO0Wo/},
   year={2017},
   annotate={A practical checklist of things instructors can do to make their computing classes more inclusive.}
+}
+
+@book{bib:lemov-champion,
+  author={Doug Lemov},
+  title={Teach Like a Champion 2.0: 62 Techniques that Put Students on the Path to College},
+  publisher={Jossey-Bass},
+  year={2014},
+  edition={2},
+  isbn={978-1118901854},
+  annotate={Presents 62 classroom techniques drawn from intensive study of thousands
+    of hours of video of good teachers in action.}
 }
 
 @book{bib:littky-big-picture,
@@ -296,6 +345,30 @@
     applied to the design of instructional materials.}
 }
 
+@article{bib:mueller-note-taking,
+  author={Pam A. Mueller and Daniel M. Oppenheimer},
+  title={The Pen Is Mightier Than the Keyboard},
+  journal={Psychological Science},
+  volume={25},
+  number={6},
+  pages={1159-1168},
+  year={2014},
+  doi={10.1177/0956797614524581},
+  annotate={Presents evidence that taking notes by hand is more effective
+    than taking notes on a laptop.}
+}
+
+@article{bib:orndorff-note-taking,
+  author={Harold N. Orndorff III},
+  title={Collaborative Note-Taking: The Impact of Cloud Computing on Classroom Performance},
+  journal={International Journal of Teaching and Learning in Higher Education},
+  volume={27},
+  number={3},
+  pages={340--351},
+  year={2015},
+  annotate={Presents a study showing that collaborative note-taking improves grades and learning outcomes.}
+}
+
 @inproceedings{bib:patitsas-cs-grades,
   author={Elizabeth Patitsas and Jesse Berlin and Michelle Craig and Steve Easterbrook},
   title={Evidence That Computer Science Grades Are Not Bimodal},
@@ -328,6 +401,15 @@
     in introductory programming courses.}
 }
 
+@book{bib:preskill-discussion,
+  author={Stephen D. Brookfield and Stephen Preskill},
+  title={The Discussion Book: 50 Great Ways to Get People Talking},
+  publisher={Jossey-Bass},
+  year={2016},
+  isbn={978-1119049715},
+  annotate={Describes fifty different ways to get groups talking productively.}
+}
+
 @book{bib:ray-ray-unix,
   author={Eric J. Ray and Deborah S. Ray},
   title={Unix and Linux: Visual QuickStart Guide},
@@ -356,16 +438,6 @@
   year={2011},
   publisher={W. W. Norton},
   annotate={Explains and explores stereotype threat and strategies for addressing it.}
-}
-
-@misc{bib:stefik-fixme,
-  author = "FIXME",
-  title = "FIXME"
-}
-
-@misc{bib:stefik-summary,
-  author = "FIXME",
-  title = "FIXME"
 }
 
 @book{bib:wiggins-mctighe,
