--- a/guide.tex
+++ b/guide.tex
@@ -1,6 +1,61 @@
 \chaplbl{Instructor's Guide}{sec:guide}
 
-\seclbl{Guide}{sec:guide-starting}
+This appendix includes material that doesn't naturally fit anywhere else.
+
+\seclbl{Further Reading}{sec:guide-reading}
+
+\begin{itemize}
+
+\item
+  Ambrose et al's \emph{How Learning Works} \cite{bib:ambrose-hlw} is
+  the best overview of what we know about teaching and learning and
+  why we believe it's true.  It's also a great example of secondary
+  literature: every topic gets a few pages, with pointers to the
+  primary literature for those who want to dive in further.
+
+\item
+  Brookfield and Preskill's \emph{The Discussion Book}
+  \cite{bib:preskill-discussion} is a catalog of ways to get groups
+  (including classes) talking to one another productively.
+
+\item
+  Green's \emph{Building a Better Teacher} \cite{bib:green-babt} looks
+  at how attempts to reform public education in the United States (and
+  other English-speaking countries) have foundered over the last forty
+  years because they're focusing on the wrong things.
+
+\item
+  Guzdial's \emph{Learner-Centered Design of Computing Education}
+  \cite{bib:guzdial-lcd} is an evidence-based argument that we must
+  design computing education for everyone, not just people who think
+  they are going to become full-time professional programmers, and
+  draws material from the author's excellent blog \cite{bib:guzdial-blog}.
+
+\item
+  Huston's \emph{Teaching What You Don't Know}
+  \cite{bib:huston-dont-know} is a good evidence-based guide to doing
+  exactly that.
+
+\item
+  Lang's \emph{Small Teaching} \cite{bib:lang-small-teaching} is a
+  short guide to evidence-based teaching practices that can be adopted
+  without requiring large up-front investments of time and money.
+
+\item
+  Lemov's \emph{Teaching Like a Champion} \cite{bib:lemov-champion} is
+  a catalog of good pedagogical practices drawn from observations of
+  hundreds of teachers over thousands of hours.
+
+\item
+  Margolis and Fisher's \emph{Unlocking the Clubhouse}
+  \cite{bib:margolis-fisher-clubhouse} and Margolis et al's
+  \emph{Stuck in the Shallow End} \cite{bib:margolis-shallow} look at
+  how women and some racial minorities are systematically pushed out
+  of computing, and what can be done about it.
+
+\end{itemize}
+
+\seclbl{Starting Out}{sec:guide-starting}
 
 To begin your class, the instructors should give a brief introduction
 that will convey their capacity to teach the material,
