--- a/motivation.tex
+++ b/motivation.tex
@@ -243,9 +243,9 @@ disparities).
 
 A great example of how stereotypes work in general was presented in
 Patitsas et al's ``Evidence That Computer Science Grades Are Not
-Bimodal'' \cite{bib:patitsas}.  This thought-provoking paper showed
-that people see evidence for a ``geek gene'' where none exists.  As
-the paper's abstract says:
+Bimodal'' \cite{bib:patitsas-cs-grades}.  This thought-provoking paper
+showed that people see evidence for a ``geek gene'' where none exists.
+As the paper's abstract says:
 
 \begin{quote}
 
