--- a/novice.tex
+++ b/novice.tex
@@ -316,6 +316,16 @@ internet is an ever-increasing threat to its validity.
 
 \end{callout}
 
+\begin{callout}{We Know Less Than We Think}{callout:empirical-bugs}
+
+Brown and Altadmri's ``Investigating Novice Programming Mistakes:
+Educator Beliefs vs Student Data'' \cite{bib:brown-empiricao} compared
+teachers' opinions about common programming errors with data from over
+100,000 students, and finds only weak consensus amongst teachers and
+between teachers and data.
+
+\end{callout}
+
 Designing an MCQ with plausible distractors is useful even if it is
 never used in class because it forces the instructor to think about
 the learners' mental models and how they might be broken---in short,
