--- a/welcome.tex
+++ b/welcome.tex
@@ -66,9 +66,11 @@ was that, ironically, I was trying to teach people how to build and
 run software in efficient, repeatable ways, but was mostly ignorant of
 equivalent techniques for writing and delivering lessons.
 
-Luckily, I discovered resources like Mark Guzdial's blog \cite{fixme}
-and the book \emph{How Learning Works} \cite{fixme}.  These led me to
-the work of Lemov, Huston, Green, Fincher, and others \cite{fixme},
+Luckily, I discovered resources like Mark Guzdial's blog
+\cite{bib:guzdial-blog} and the book \emph{How Learning
+Works} \cite{bib:ambrose-hlw}.  These led me to the work of Lemov,
+Huston, Green, and others
+\cite{bib:lemov-champion,bib:huston-dont-know,bib:green-babt},
 which showed me what would make my teaching better, and why I should
 believe it.
 
@@ -163,15 +165,17 @@ and find a space of their own in which to say it.
 \subseclbl{Take Notes Together}{sec:welcome-notes}
 
 Many studies have shown that taking notes while learning improves
-retention, even if those notes are then thrown away \cite{fixme}.  As
-we will discuss in \secref{sec:memory}, this happens because taking
-notes forces you to organize and reflect on material as it's coming
-in, which in turn increases the likelihood that you will transfer it
-to long-term memory in a usable way.
+retention \cite{bib:aiken-note-taking,bib:bohay-note-taking}.  As we
+will discuss in \secref{sec:memory}, this happens because taking notes
+forces you to organize and reflect on material as it's coming in,
+which in turn increases the likelihood that you will transfer it to
+long-term memory in a usable way.
 
-Our experience, and some early research findings \cite{fixme}, lead us
-to believe that taking notes \emph{collaboratively} helps learning
-even more:
+Our experience, and some recent research findings, lead us to believe
+that taking notes \emph{collaboratively} helps learning even
+more \cite{bib:orndorff-note-taking}, even though taking notes on a
+computer is generally less effective than taking notes using pen and
+paper \cite{bib:mueller-note-taking}.  Taking notes collaboratively:
 
 \begin{itemize}
 
